syntax = "proto3";

package player;

service PlayerService {
  rpc GetPlayer(GetPlayerRequest) returns (PlayerResponse);
  rpc CreatePlayer(CreatePlayerRequest) returns (PlayerResponse);
}

message GetPlayerRequest {
  string player_id = 1;
}

message CreatePlayerRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message PlayerResponse {
  string player_id = 1;
  string username = 2;
  string email = 3;
}
